[package]
name = "matrixutils"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = { version = "*", default-features = false, features = ["eyre", "sqlite", "native-tls", "e2e-encryption"] }
matrix-sdk-base = "*"

tokio = "*"
futures = "*"
futures-util = "*"

url = { version = "*", features = ["serde"] }
serde_json = "*"
serde = "*"

tracing = "*"
eyre = "*"
