[package]
name = "matrixutils"
version = "0.2.1"
edition = "2024"

[dependencies]
matrix-sdk = { version = "*", default-features = false, features = ["eyre", "sqlite", "native-tls", "e2e-encryption"] }
matrix-sdk-base = "*"

# password login
rustyline = { version = "*", default-features = false }
pinentry = "*"
secrecy = "0.10" # be consistent with pinentry

tokio = { version = "*", features = ["signal"] }
futures = "*"
futures-util = "*"

url = { version = "*", features = ["serde"] }
serde_json = "*"
serde = "*"

tracing = "*"
eyre = "*"
